<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txt_herramienta"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txt_herramienta"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_tipo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txt_tipo"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_herramienta" />

    <EditText
        android:id="@+id/txt_tamano"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txt_tamano"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tipo" />

    <EditText
        android:id="@+id/txt_codigo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txt_codigo"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tamano" />

    <EditText
        android:id="@+id/txt_precio"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txt_precio"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_codigo" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_precio" />

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrar" />

    <TextView
        android:id="@+id/txt_arreglo"
        android:layout_width="347dp"
        android:layout_height="118dp"
        android:hint="arreglo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>